# license-manager

./: Makefile.am  README.md  autogen.sh  clean.sh  configure.ac
data/: Makefile.am  lcsmgrservice.service.in  lcsmgrservice.spec  org.freedesktop.LcsMgrService.conf.in  org.freedesktop.LcsMgrService.service.in  org.freedesktop.LcsMgrService.xml
src/: Makefile.am  common.c  common.h  hwinfo.c  hwinfo.h  lcsmgrservice.c  lcsmgrservice.h  main.c  md5.c  md5.h
tools/: Makefile.am  lsmgr.c  lsmgrsign.c
